<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.homework.ellaeinarsen.hangmanee.GameActivity">

    <ImageView
        android:id="@+id/game_picture"
        android:layout_marginTop="@dimen/margin_title_to_top"
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/game_picture_description"
        android:src="@drawable/hangman10" />

    <TextView
        android:id="@+id/game_word"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/game_picture"
        android:textSize="@dimen/word_big_size"
        android:text="@string/game_word_text"/>

    <TextView
        android:id="@+id/game_attempts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/game_word"
        android:text="@string/game_attempts_text"/>

    <TextView
        android:id="@+id/game_attempts_2"
        android:layout_marginLeft="@dimen/margin_between_text"
        android:layout_marginStart="@dimen/margin_between_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/game_attempts"
        android:layout_toEndOf="@id/game_attempts"
        android:layout_below="@id/game_word"
        android:text="@string/game_attempts_2"/>

    <TextView
        android:id="@+id/game_letters_used"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/game_attempts"
        android:text="@string/game_letters_text"/>

    <TextView
        android:id="@+id/game_letters_used_2"
        android:layout_marginLeft="@dimen/margin_between_text"
        android:layout_marginStart="@dimen/margin_between_text"
        android:layout_width="match_parent"
        android:layout_below="@id/game_attempts_2"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/game_letters_used"
        android:layout_toEndOf="@id/game_letters_used"
        android:text="@string/game_letters_text_2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/game_input"
            android:inputType="text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/game_input_field"/>

        <Button
            android:id="@+id/game_button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_button_1_text"
            android:onClick="startOnGuessButtonClicked"/>


    </LinearLayout>

</RelativeLayout>
