<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.homework.ellaeinarsen.hangmanee.ResultActivity">

    <TextView
        android:id="@+id/result_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_title_to_top"
        android:textSize="@dimen/title_size"
        android:text="@string/result_title_text"/>

    <TextView
        android:id="@+id/result_word"
        android:layout_below="@id/result_title"
        android:layout_marginTop="@dimen/margin_to_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_word_text"/>

    <TextView
        android:id="@+id/result_word_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_between_text"
        android:layout_marginStart="@dimen/margin_between_text"
        android:layout_below="@id/result_title"
        android:layout_marginTop="@dimen/margin_to_title"
        android:layout_toRightOf="@id/result_word"
        android:layout_toEndOf="@id/result_word"
        android:text="@string/result_word_text_2"/>

    <TextView
        android:id="@+id/result_tries"
        android:layout_below="@id/result_word"
        android:layout_marginTop="@dimen/margin_to_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_attempt_text"/>

    <TextView
        android:id="@+id/result_tries_2"
        android:layout_marginTop="@dimen/margin_to_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/result_word"
        android:layout_toRightOf="@id/result_tries"
        android:layout_toEndOf="@id/result_tries"
        android:layout_marginLeft="@dimen/margin_between_text"
        android:layout_marginStart="@dimen/margin_between_text"/>

    <Button
        android:id="@+id/result_button_1"
        android:layout_width="200dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/result_tries"
        android:text="@string/result_button_1_text"
        android:onClick="goToMainMenuActivated"/>

    <ImageView
        android:id="@+id/result_picture"
        android:contentDescription="@string/game_picture_description"
        android:adjustViewBounds="true"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@id/result_button_1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_title_to_top"
        android:src="@drawable/hangman10"
        />

</RelativeLayout>
