<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainMenuActivity">

   <TextView
       android:id="@+id/menu_title"
       android:layout_marginTop="@dimen/margin_title_to_top"
       android:layout_centerHorizontal="true"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="@dimen/title_size"
       android:text="@string/menu_title_text"/>

    <Button
        android:id="@+id/menu_button_1"
        android:layout_marginTop="@dimen/margin_to_title"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/menu_title"
        android:text="@string/menu_button_1_text"
        android:onClick="startGame"/>

    <Button
        android:id="@+id/menu_button_2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/menu_button_1"
        android:text="@string/menu_button_2_text"
        android:onClick="startAbout"/>
</RelativeLayout>
